package com.dutianze.designpattern.others.servicelayer;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class ServiceLayerApplication {

    public static void main(String[] args) {
        SpringApplication.run(ServiceLayerApplication.class, args);
    }
}
